--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E✉%3C/text%3E%3C/svg%3E"
         type="image/svg+xml">
     <style>
+        html,body{
+            height: 100%;
+        }
         :root {
             --bg-color: #f4f4f4;
             --container-bg: white;
